# manor

./: .cortex.yaml  .env.example  .gitignore  .gitmodules  .prettierignore  1  CHANGELOG.md  CLAUDE.md  Makefile  Package.swift  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  skills-lock.json  tsconfig.electron.json  tsconfig.node.tsbuildinfo  vfs_fix.yaml  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
docs/: ADR-077-project-setup-wizard.md  ADR-claude-activity-hooks.md  ADR-session-restore.md  ADR-swiftui-migration.md  ADR-tauri-migration.md  ADR-terminal-session-persistence.md  AGENT-TASK-SYSTEM.md  ARCHITECTURE-ISSUES.md  ARCHITECTURE.md  GHOSTTY_INTEGRATION.md  PROJECT_SIDEBAR_ARD.md  TODOS.md
electron/: agent-connectors.ts  agent-hook-events.ts  agent-hooks.ts  app-lifecycle.test.ts  app-lifecycle.ts  branch-name.ts  branch-watcher.ts  diff-watcher.ts  external-sessions.ts  github.test.ts  github.ts  hook-relay-effects.ts  hook-relay-transition.ts  hook-relay.ts  ipc-validate.test.ts  ipc-validate.ts  keybindings.ts  linear.test.ts  linear.ts  main.ts  mcp-webview-server.ts  notifications.ts  paths.ts  persistence.test.ts  persistence.ts  picker-script.ts  portless.ts  ports.ts  preferences.ts  preload.ts  prewarm-manager.ts  pty.ts  shell.ts  sourcemap-symbolication.ts  task-persistence.test.ts  task-persistence.ts  theme.test.ts  theme.ts  updater.ts  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: github.rs  lib.rs  main.rs  models.rs  persistence.rs  ports.rs  pty.rs  shell.rs  theme.rs
(+1050 files in other folders)
